Fix rules size on small screen

--- a/www/main.css
+++ b/www/main.css
@@ -248,7 +248,8 @@
 }
 
 .rules-container {
-    width: 800px;
+    max-width: 700px;
+    width: 100%;
     padding-bottom: 100px;
 }
 
